--- a/style.scss
+++ b/style.scss
@@ -105,6 +105,10 @@ $warningYellow: #FFCC00;
                 border: solid 1px lightgrey;
                 text-align: center;
             }
+
+            td:hover {
+                background-color: $lightgrey;
+            }
         }
 
     }
