--- a/style.css
+++ b/style.css
@@ -86,6 +86,94 @@
   background-color: #FAFAFA;
 }
 
+.pd-sidemenu {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  position: fixed;
+  top: 0;
+  left: 0;
+  -webkit-transform: translateX(-300px);
+          transform: translateX(-300px);
+  width: 300px;
+  background-color: #FFF;
+  height: 100%;
+  z-index: 9999;
+  -webkit-transition: -webkit-transform ease-in-out 1s;
+  transition: -webkit-transform ease-in-out 1s;
+  transition: transform ease-in-out 1s;
+  transition: transform ease-in-out 1s, -webkit-transform ease-in-out 1s;
+  overflow: -moz-scrollbars-none;
+  scrollbar-width: none;
+  -ms-overflow-style: none;
+  -webkit-box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+          box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+}
+
+.pd-sidemenu .pd-menu-item {
+  width: calc(100% - 32px);
+  height: 32px;
+  padding-left: 32px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.pd-sidemenu .pd-menu-item:hover {
+  cursor: pointer;
+  background-color: #FAFAFA;
+}
+
+.pd-sidemenu .pd-menu-header {
+  color: #989898;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding-left: 32px;
+  width: calc(100% - 32px);
+  height: 48px;
+  border-bottom: solid 1px lightgrey;
+}
+
+.pd-sidemenu::-webkit-scrollbar {
+  width: 0;
+}
+
+.pd-sidemenu.active {
+  -webkit-transform: translateX(0);
+          transform: translateX(0);
+}
+
 .pd-input[type=text] {
   border: solid 1px lightgrey;
   border-radius: 4px;
