--- a/style.css
+++ b/style.css
@@ -113,9 +113,6 @@
   transition: -webkit-transform ease-in-out 1s;
   transition: transform ease-in-out 1s;
   transition: transform ease-in-out 1s, -webkit-transform ease-in-out 1s;
-  overflow: -moz-scrollbars-none;
-  scrollbar-width: none;
-  -ms-overflow-style: none;
   -webkit-box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
           box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
 }
@@ -163,10 +160,6 @@
   width: calc(100% - 32px);
   height: 48px;
   border-bottom: solid 1px lightgrey;
-}
-
-.pd-sidemenu::-webkit-scrollbar {
-  width: 0;
 }
 
 .pd-sidemenu.active {
@@ -248,9 +241,6 @@
   padding-top: 8px;
   padding-bottom: 8px;
   overflow-y: scroll;
-  overflow: -moz-scrollbars-none;
-  scrollbar-width: none;
-  -ms-overflow-style: none;
 }
 
 .pd-list .pd-list-item {
@@ -275,10 +265,6 @@
 
 .pd-list .pd-list-item:hover {
   background-color: #FAFAFA;
-}
-
-.pd-list::-webkit-scrollbar {
-  display: none;
 }
 
 .pd-tabbar {
@@ -367,6 +353,17 @@
   -webkit-animation-iteration-count: infinite;
           animation-iteration-count: infinite;
   background-color: #500af0;
+}
+
+.no-scrollbar {
+  overflow-y: scroll;
+  overflow: -moz-scrollbars-none;
+  scrollbar-width: none;
+  -ms-overflow-style: none;
+}
+
+.no-scrollbar::-webkit-scrollbar {
+  display: none;
 }
 
 @-webkit-keyframes preloader1 {
