--- a/style.scss
+++ b/style.scss
@@ -1,6 +1,6 @@
-$deepBlue: #500af0;
-$deepBlueHover: #824cfc;
-$preloaderBg: #986cff;
+$deepBlue: #3c0af0;
+$deepBlueHover: #4f4cfc;
+$preloaderBg: #766cff;
 $lightgrey: #FAFAFA;
 $mediumgrey: #989898;
 $darkGrey: #424242;
