--- a/style.scss
+++ b/style.scss
@@ -14,6 +14,29 @@ $warningYellow: #FFCC00;
     padding: 0;
 }
 
+//normalize components
+input[type=range] {
+    -webkit-appearance: none;
+    width: 100%;
+    background: transparent;
+}
+
+input[type=range]::-webkit-slider-thumb {
+    -webkit-appearance: none;
+}
+
+input[type=range]:focus {
+    outline: none;
+}
+
+input[type=range]::-ms-track {
+    width: 100%;
+    cursor: pointer;
+    background: transparent;
+    border-color: transparent;
+    color: transparent;
+}
+
 .pd {
 
     //colors
@@ -184,6 +207,87 @@ $warningYellow: #FFCC00;
         border: solid 1px $deepBlue;
     }
 
+    //range
+    &-range[type=range] {
+        -webkit-appearance: none;
+        margin: 18px 0;
+        width: 100%;
+    }
+
+    &-range[type=range]:focus {
+        outline: none;
+    }
+
+    &-range[type=range]::-webkit-slider-runnable-track {
+        width: 100%;
+        height: 3px;
+        cursor: pointer;
+        background: lightgrey;
+    }
+
+    &-range[type=range]::-webkit-slider-thumb {
+        border: 1px solid lightgrey;
+        height: 16px;
+        width: 16px;
+        border-radius: 50%;
+        background: #ffffff;
+        cursor: pointer;
+        -webkit-appearance: none;
+        margin-top: -6px
+    }
+
+    &-range[type=range]:focus::-webkit-slider-thumb,
+    &-range[type=range]:focus::-moz-range-thumb,
+    &-range[type=range]:focus::-ms-thumb {
+        background: $deepBlue;
+    }
+
+    &-range[type=range]::-moz-range-track {
+        width: 100%;
+        height: 3px;
+        cursor: pointer;
+        background-color: lightgrey;
+    }
+
+    &-range[type=range]::-moz-range-thumb {
+        border: 1px solid lightgrey;
+        height: 16px;
+        width: 16px;
+        border-radius: 50%;
+        background: #ffffff;
+        cursor: pointer;
+        margin-top: -6px;
+    }
+
+    &-range[type=range]::-ms-track {
+        width: 100%;
+        height: 3px;
+        cursor: pointer;
+        background: transparent;
+        border-color: transparent;
+        border-width: 16px 0;
+        color: transparent;
+    }
+
+    &-range[type=range]::-ms-fill-lower {
+        background: lightgrey;
+        border-radius: 2.6px;
+    }
+
+    &-range[type=range]::-ms-fill-upper {
+        background: lightgrey;
+    }
+
+    &-range[type=range]::-ms-thumb {
+        border: 1px solid lightgrey;
+        height: 16px;
+        width: 16px;
+        border-radius: 50%;
+        background: #ffffff;
+        cursor: pointer;
+        margin-top: 2px;
+    }
+
     //buttons
     &-button {
         border: solid 1px $deepBlue;
@@ -316,6 +420,81 @@ $warningYellow: #FFCC00;
         display: none;
     }
 
+    &-tabslider {
+        height: 100%;
+        width: 100%;
+        display: grid;
+        grid-template-rows: 48px 1fr;
+        // box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12),
+        //             0 1px 2px rgba(0, 0, 0, 0.24);
+        border: solid 1px lightgrey;
+        &-bar {
+            display: flex;
+            flex-direction: row;
+            justify-content: space-evenly;
+            align-items: center;
+            height: 100%;
+            width: 100%;
+            overflow-x: auto;
+            overflow-y: hidden;
+            overflow: -moz-scrollbars-none;
+            scrollbar-width: none;
+            -ms-overflow-style: none;
+            padding: 0 8 0 8;
+            &-tab {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                background-color: transparent;
+                color: $deepBlue;
+                width: 100%;
+                height: 100%;
+                transition: background ease-in-out .3s;
+                word-wrap: nowrap;
+                min-width: 48px;
+                white-space: nowrap;
+                padding: 0 4 0 4;
+            }
+            &-tab:hover {
+                background-color: rgba(80, 10, 240, 0.2);
+                border-bottom: solid 2px $deepBlue;
+                cursor: pointer;
+            }
+            &-tab.active {
+                border-bottom: solid 2px $deepBlue;
+            }
+        }
+        &-container {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: row;
+            border-top: solid 1px $lightgrey;
+            &-item {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                height: 100%;
+                width: 100%;
+                display: none;
+            }
+            &-item.active {
+                display: flex;
+                
+            }
+            &-item.active.left {
+                animation-name: tabsliderfromleft;
+                animation-duration: 1s;
+                animation-iteration-count: 1;
+            }
+            &-item.active.right {
+                animation-name: tabsliderfromright;
+                animation-duration: 1s;
+                animation-iteration-count: 1;
+            }
+        }
+    }
+
     &-preloader {
         background-color: $preloaderBg;
         height: 4px;
@@ -390,5 +569,43 @@ $warningYellow: #FFCC00;
 
     100% {
         width: 100%;
+    }
+}
+
+@keyframes tabsliderfromleft {
+    0% {
+        transform: translateX(-50%);
+        opacity: 0;
+    }
+    50% {
+        opacity: 0.3;
+        z-index: 1;
+    }
+    75% {
+        opacity: 0.5;
+        display: flex;
+    }
+    100% {
+        transform: translateX(0);
+        opacity: 1;
+    }
+}
+
+@keyframes tabsliderfromright {
+    0% {
+        transform: translateX(50%);
+        opacity: 0;
+    }
+    50% {
+        opacity: 0.3;
+        z-index: 1;
+    }
+    75% {
+        opacity: 0.5;
+        display: flex;
+    }
+    100% {
+        transform: translateX(0);
+        opacity: 1;
     }
 }
