--- a/style.css
+++ b/style.css
@@ -289,9 +289,21 @@ input[type=range]::-ms-track {
   transition: all ease-in-out .3s;
 }
 
+.pd-button.disabled {
+  border: solid 1px #766cff;
+  background-color: #766cff;
+}
+
+.pd-button.disabled:hover {
+  cursor: default;
+  background-color: #766cff;
+  border: solid 1px #766cff;
+}
+
 .pd-button:hover {
   border: solid 1px #4f4cfc;
   background-color: #4f4cfc;
+  cursor: pointer;
 }
 
 .pd-floating-action {
@@ -303,6 +315,18 @@ input[type=range]::-ms-track {
   padding: 4px;
   -webkit-transition: all ease-in-out .3s;
   transition: all ease-in-out .3s;
+  cursor: pointer;
+}
+
+.pd-floating-action.disabled {
+  border: solid 1px #766cff;
+  background-color: #766cff;
+}
+
+.pd-floating-action.disabled:hover {
+  cursor: default;
+  background-color: #766cff;
+  border: solid 1px #766cff;
 }
 
 .pd-floating-action:hover {
@@ -322,6 +346,17 @@ input[type=range]::-ms-track {
   padding: 4px;
   -webkit-transition: all ease-in-out .3s;
   transition: all ease-in-out .3s;
+}
+
+.pd-fixed-action.disabled {
+  border: solid 1px #766cff;
+  background-color: #766cff;
+}
+
+.pd-fixed-action.disabled:hover {
+  cursor: default;
+  background-color: #766cff;
+  border: solid 1px #766cff;
 }
 
 .pd-fixed-action:hover {
@@ -414,13 +449,15 @@ input[type=range]::-ms-track {
 }
 
 .pd-tabbar .pd-tabbar-tab.active {
-  border-bottom: solid 2px #3c0af0;
+  -webkit-box-shadow: inset 0 -2px #3c0af0;
+          box-shadow: inset 0 -2px #3c0af0;
 }
 
 .pd-tabbar .pd-tabbar-tab:hover {
   background-color: rgba(80, 10, 240, 0.2);
-  border-bottom: solid 2px #3c0af0;
   cursor: pointer;
+  -webkit-box-shadow: inset 0 -2px #3c0af0;
+          box-shadow: inset 0 -2px #3c0af0;
 }
 
 .pd-tabbar::-webkit-scrollbar {
@@ -485,12 +522,14 @@ input[type=range]::-ms-track {
 
 .pd-tabslider-bar-tab:hover {
   background-color: rgba(80, 10, 240, 0.2);
-  border-bottom: solid 2px #3c0af0;
   cursor: pointer;
+  -webkit-box-shadow: inset 0 -2px #3c0af0;
+          box-shadow: inset 0 -2px #3c0af0;
 }
 
 .pd-tabslider-bar-tab.active {
-  border-bottom: solid 2px #3c0af0;
+  -webkit-box-shadow: inset 0 -2px #3c0af0;
+          box-shadow: inset 0 -2px #3c0af0;
 }
 
 .pd-tabslider-container {
@@ -547,6 +586,86 @@ input[type=range]::-ms-track {
           animation-duration: 1s;
   -webkit-animation-iteration-count: 1;
           animation-iteration-count: 1;
+}
+
+.pd-lightbox {
+  height: 100%;
+  width: 100%;
+  background-color: #FAFAFA;
+  will-change: top, left, right, bottom;
+}
+
+.pd-lightbox .image {
+  height: 100%;
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.pd-lightbox .image img {
+  height: 100%;
+  width: 100%;
+}
+
+.pd-lightbox .image img:hover {
+  cursor: -webkit-zoom-in;
+  cursor: zoom-in;
+}
+
+.pd-lightbox .image.active {
+  -webkit-animation-name: showLightbox;
+          animation-name: showLightbox;
+  -webkit-animation-duration: .5s;
+          animation-duration: .5s;
+  -webkit-animation-iteration-count: 1;
+          animation-iteration-count: 1;
+  -webkit-animation-fill-mode: forwards;
+          animation-fill-mode: forwards;
+}
+
+.pd-lightbox .image.active img {
+  -webkit-animation-name: enlargeImage;
+          animation-name: enlargeImage;
+  -webkit-animation-duration: .5s;
+          animation-duration: .5s;
+  -webkit-animation-iteration-count: 1;
+          animation-iteration-count: 1;
+  -webkit-animation-fill-mode: forwards;
+          animation-fill-mode: forwards;
+}
+
+.pd-lightbox .image.active img:hover {
+  cursor: -webkit-zoom-out;
+  cursor: zoom-out;
+}
+
+.pd-lightbox .image.deactivated {
+  -webkit-animation-name: hideLightbox;
+          animation-name: hideLightbox;
+  -webkit-animation-duration: .5s;
+          animation-duration: .5s;
+  -webkit-animation-iteration-count: 1;
+          animation-iteration-count: 1;
+  -webkit-animation-fill-mode: forwards;
+          animation-fill-mode: forwards;
+}
+
+.pd-lightbox .image.deactivated img {
+  -webkit-animation-name: minimizeImage;
+          animation-name: minimizeImage;
+  -webkit-animation-duration: .5s;
+          animation-duration: .5s;
+  -webkit-animation-iteration-count: 1;
+          animation-iteration-count: 1;
+  -webkit-animation-fill-mode: forwards;
+          animation-fill-mode: forwards;
 }
 
 .pd-preloader {
@@ -729,6 +848,126 @@ input[type=range]::-ms-track {
     -webkit-transform: translateX(0);
             transform: translateX(0);
     opacity: 1;
+  }
+}
+
+@-webkit-keyframes showLightbox {
+  1% {
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 9999;
+  }
+  100% {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #424242;
+    z-index: 9999;
+  }
+}
+
+@keyframes showLightbox {
+  1% {
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 9999;
+  }
+  100% {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #424242;
+    z-index: 9999;
+  }
+}
+
+@-webkit-keyframes enlargeImage {
+  1% {
+    max-width: 35%;
+    max-height: 30%;
+  }
+  100% {
+    max-width: 90%;
+    max-height: 80%;
+  }
+}
+
+@keyframes enlargeImage {
+  1% {
+    max-width: 35%;
+    max-height: 30%;
+  }
+  100% {
+    max-width: 90%;
+    max-height: 80%;
+  }
+}
+
+@-webkit-keyframes hideLightbox {
+  0% {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    left: 0;
+    background-color: #424242;
+    z-index: 9999;
+  }
+  100% {
+    z-index: initial;
+    position: initial;
+    left: initial;
+    right: initial;
+    top: initial;
+    bottom: initial;
+  }
+}
+
+@keyframes hideLightbox {
+  0% {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    left: 0;
+    background-color: #424242;
+    z-index: 9999;
+  }
+  100% {
+    z-index: initial;
+    position: initial;
+    left: initial;
+    right: initial;
+    top: initial;
+    bottom: initial;
+  }
+}
+
+@-webkit-keyframes minimizeImage {
+  0% {
+    max-width: 90%;
+    max-height: 80%;
+  }
+  100% {
+    height: 100%;
+    width: 100%;
+  }
+}
+
+@keyframes minimizeImage {
+  0% {
+    max-width: 90%;
+    max-height: 80%;
+  }
+  100% {
+    height: 100%;
+    width: 100%;
   }
 }
 /*# sourceMappingURL=style.css.map */
