--- a/style.scss
+++ b/style.scss
@@ -297,11 +297,21 @@ input[type=range]::-ms-track {
         // margin: 4px;
         padding: 4px;
         transition: all ease-in-out .3s;
+        &.disabled {
+            border: solid 1px $preloaderBg;
+            background-color: $preloaderBg;
+            &:hover {
+                cursor: default;
+                background-color: $preloaderBg;
+                border: solid 1px $preloaderBg;
+            }
+        }
     }
 
     &-button:hover {
         border: solid 1px $deepBlueHover;
         background-color: $deepBlueHover;
+        cursor: pointer;
     }
 
     &-floating-action {
@@ -313,6 +323,16 @@ input[type=range]::-ms-track {
         // margin: 4px;
         padding: 4px;
         transition: all ease-in-out .3s;
+        cursor: pointer;
+        &.disabled {
+            border: solid 1px $preloaderBg;
+            background-color: $preloaderBg;
+            &:hover {
+                cursor: default;
+                background-color: $preloaderBg;
+                border: solid 1px $preloaderBg;
+            }
+        }
     }
 
     &-floating-action:hover {
@@ -332,6 +352,15 @@ input[type=range]::-ms-track {
         // margin: 4px;
         padding: 4px;
         transition: all ease-in-out .3s;
+        &.disabled {
+            border: solid 1px $preloaderBg;
+            background-color: $preloaderBg;
+            &:hover {
+                cursor: default;
+                background-color: $preloaderBg;
+                border: solid 1px $preloaderBg;
+            }
+        }
     }
 
     &-fixed-action:hover {
@@ -407,13 +436,15 @@ input[type=range]::-ms-track {
         }
 
         .pd-tabbar-tab.active {
-            border-bottom: solid 2px $deepBlue;
+            // border-bottom: solid 2px $deepBlue;
+            box-shadow: inset 0 -2px $deepBlue;
         }
 
         .pd-tabbar-tab:hover {
             background-color: rgba(80, 10, 240, 0.2);
-            border-bottom: solid 2px $deepBlue;
+            // border-bottom: solid 2px $deepBlue;
             cursor: pointer;
+            box-shadow: inset 0 -2px $deepBlue;
         }
     }
     &-tabbar::-webkit-scrollbar {
@@ -457,11 +488,12 @@ input[type=range]::-ms-track {
             }
             &-tab:hover {
                 background-color: rgba(80, 10, 240, 0.2);
-                border-bottom: solid 2px $deepBlue;
+                // border-bottom: solid 2px $deepBlue;
                 cursor: pointer;
+                box-shadow: inset 0 -2px $deepBlue;
             }
             &-tab.active {
-                border-bottom: solid 2px $deepBlue;
+                box-shadow: inset 0 -2px $deepBlue;
             }
         }
         &-container {
@@ -495,6 +527,54 @@ input[type=range]::-ms-track {
         }
     }
 
+    &-lightbox {
+        height: 100%;
+        width: 100%;
+        background-color: $lightgrey;
+        will-change: top, left, right, bottom;
+        .image {
+            height: 100%;
+            width: 100%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            img {
+                height: 100%;
+                width: 100%;
+            }
+            img:hover {
+                cursor: zoom-in;
+            }
+        }
+        .image.active {
+            animation-name: showLightbox;
+            animation-duration: .5s;
+            animation-iteration-count: 1;
+            animation-fill-mode: forwards;
+            img {
+                animation-name: enlargeImage;
+                animation-duration: .5s;
+                animation-iteration-count: 1;
+                animation-fill-mode: forwards;
+            }
+            img:hover {
+                cursor: zoom-out;
+            }
+        }
+        .image.deactivated {
+            animation-name: hideLightbox;
+            animation-duration: .5s;
+            animation-iteration-count: 1;
+            animation-fill-mode: forwards;
+            img {
+                animation-name: minimizeImage;
+                animation-duration: .5s;
+                animation-iteration-count: 1;
+                animation-fill-mode: forwards;
+            }
+        }
+    }
+
     &-preloader {
         background-color: $preloaderBg;
         height: 4px;
@@ -502,7 +582,6 @@ input[type=range]::-ms-track {
 
         &-indeterminate1 {
             height: 100%;
-            //width: 20%;
             animation-name: preloader1;
             animation-duration: 2s;
             animation-iteration-count: infinite;
@@ -511,7 +590,6 @@ input[type=range]::-ms-track {
 
         &-indeterminate2 {
             height: 100%;
-            //width: 20%;
             animation-name: preloader2;
             animation-duration: 2s;
             animation-iteration-count: infinite;
@@ -607,5 +685,67 @@ input[type=range]::-ms-track {
     100% {
         transform: translateX(0);
         opacity: 1;
+    }
+}
+
+@keyframes showLightbox {
+    1% {
+        position: fixed;
+        top: 0;
+        left: 0;
+        z-index: 9999;
+    }
+    100% {
+        position: fixed;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        background-color: $darkGrey;
+        z-index: 9999;
+    }
+}
+
+@keyframes enlargeImage {
+    1% {
+        max-width: 35%;
+        max-height: 30%;
+    }
+    100% {
+        max-width: 90%;
+        max-height: 80%;
+    }
+}
+
+@keyframes hideLightbox{
+    0% {
+        position: fixed;
+        top: 0;
+        left: 0;
+        right: 0;
+        left: 0;
+        background-color: $darkGrey;
+        z-index: 9999;
+    }
+
+    100% {
+        z-index: initial;
+        position: initial;
+        left: initial;
+        right: initial;
+        top: initial;
+        bottom: initial;
+    }
+}
+
+@keyframes minimizeImage {
+    0% {
+        max-width: 90%;
+        max-height: 80%;
+    }
+    
+    100% {
+        height: 100%;
+        width: 100%;
     }
 }
